Pulizia codice: mainActivity, GroupsAdapter, GroupsFragment, ActivitiesAdapter, ActivitiesFragment